# math_functions

./: README.md  pyproject.toml
notebooks/: playground.ipynb
notebooks/analysis/: bressoud.ipynb
src/: __init__.py  _function.py  _real_function.py
src/constants/: __init__.py  _type_hints.py
src/interfaces/: __init__.py  _calculus_engine.py  _coordinates.py  _differentiation_engine.py  _function.py  _integration_engine.py  _interval.py  _math_set.py  _vector_space.py
src/math_toolbox/: __init__.py  _real_function.py
src/math_toolbox/common_functions/: __init__.py
src/math_toolbox/constants/: _type_hints.py
src/math_toolbox/exceptions/: __init__.py  _invalid_number_of_terms_error.py  _invalid_term_error.py
src/math_toolbox/interfaces/: __init__.py  _function.py  _math_set.py  _series.py
src/math_toolbox/series/: __init__.py  _function_series.py
src/math_toolbox/sets/: __init__.py
src/math_toolbox/sets/intervals/: __init__.py  _open_interval.py
src/sets/intervals/: _closed_interval.py  _interval_base.py
tests/: test_cont_function.py
